[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-steganalysis"
version = "0.1.0"
description = "PyTorch implementation of classic CNNs for steganalysis (XuNet, SRNet, YeNet, etc.)"
authors = [{ name = "Albblgb et al.", email = "unknown@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch"]
